# StockWidget

./: .gitignore  CMakeLists.txt  README.md  exclude.txt  widget.desktop
include/: Backend.h  BackendException.h  ChartInfo.h  ETF_Holdings.h  EncryptOps.h  FileOps.h  GuiErrorWindow.h  JsonParseOps.h  Metrics.h  RequestOps.h  StockFinancials.h  StockInfo.h  guiWindowOps.h  utils.h
libs/: directions.txt
notes/: CMakeLists.bak  async_request.cpp  error_algo.txt  holding.cpp  main.cpp  notes.txt  possible_pricetarget.txt  reqs.txt  responses.txt  windowflags.txt
src/: Backend.cpp  BackendException.cpp  ChartInfo.cpp  ETF_Holdings.cpp  EncryptOps.cpp  FileOps.cpp  GuiErrorWindow.cpp  JsonParseOps.cpp  Metrics.cpp  RequestOps.cpp  StockFinancials.cpp  StockInfo.cpp  guiWindowOps.cpp  main.cpp  utils.cpp
